feat: migrate to Java 17 and Spring Boot 3.0 using OpenRewrite
Recipes executed:
- org.openrewrite.java.migrate.UpgradeToJava17
- org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_0

Changes applied automatically by OpenRewrite:
- javax.* → jakarta.* (164 imports across 34 files)
- Spring Security: antMatchers → requestMatchers, lambdas, @EnableMethodSecurity
- String.format() → .formatted() (Java 17)
- @Serial annotation on serialVersionUID fields
- pom.xml: Spring Boot 3.0.13, Java 17, updated dependencies
- 2 methods in SecurityConfig marked for manual migration

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>