@@ -10,7 +10,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import javax.transaction.Transactional;
+import jakarta.transaction.Transactional;
 
 @Service
 public class CustomUserDetailsServiceImpl implements UserDetailsService, CustomUserDetailsService {
@@ -21,14 +21,14 @@ public class CustomUserDetailsServiceImpl implements UserDetailsService, CustomU
 	@Transactional
 	public UserDetails loadUserByUsername(String usernameOrEmail) {
 		User user = userRepository.findByUsernameOrEmail(usernameOrEmail, usernameOrEmail)
-				.orElseThrow(() -> new UsernameNotFoundException(String.format("User not found with this username or email: %s", usernameOrEmail)));
+				.orElseThrow(() -> new UsernameNotFoundException("User not found with this username or email: %s".formatted(usernameOrEmail)));
 		return UserPrincipal.create(user);
 	}
 
 	@Override
 	@Transactional
 	public UserDetails loadUserById(Long id) {
-		User user = userRepository.findById(id).orElseThrow(() -> new UsernameNotFoundException(String.format("User not found with id: %s", id)));
+		User user = userRepository.findById(id).orElseThrow(() -> new UsernameNotFoundException("User not found with id: %s".formatted(id)));
 
 		return UserPrincipal.create(user);
 	}
